--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,37 @@ main: doubleplugin.DoublePlugin
 api-version: 1.19
 authors: [ RedKiller ]
 description: RedKiller`s Library
+
+commands:
+  check:
+    description: check Player or Server Info
+    aliases: [확인, ghkrdls, 촏차]
+    permission: DoublePluginSystem
+    permission-message: 당신은 이 명령어를 사용할 권한이 존재하지 않습니다!
+  modify:
+    description: modify Player or Server Info
+    aliases: [수정, tnwjd, ㅡㅐ야료]
+    permission: DoublePluginSystem
+    permission-message: 당신은 이 명령어를 사용할 권한이 존재하지 않습니다!
+  skull:
+    description: get custom skull by texture
+    aliases: [스컬, tmzjf, 나ㅕㅣㅣ]
+    permission: DoublePluginSystem
+    permission-message: 당신은 이 명령어를 사용할 권한이 존재하지 않습니다!
+  properties:
+    description: get custom skull by texture
+    aliases: [설정, tjfwjd, ㅔ개ㅔㄷㄱ샫ㄴ, pro, ㅔ개]
+    permission: DoublePluginSystem
+    permission-message: 당신은 이 명령어를 사용할 권한이 존재하지 않습니다!
+  startItem:
+    description: give player start Item
+    aliases: [기본템]
+  test:
+    description: test command
+    aliases: [테스트]
+    permission: DoublePluginSystem
+    permission-message: 당신은 이 명령어를 사용할 권한이 존재하지 않습니다!
+
+permissions:
+  DoublePluginSystem:
+    default: op
