--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: DoublePlugin-1.19.2
 version: 1.0
-main: doubleplugin.DoublePlugin
+main: doublePlugin.DoublePlugin
 api-version: 1.19
 authors: [ RedKiller ]
 description: RedKiller`s Library
